--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="page-header">
       <div class="container">
         <nav class="main-nav">
-          <a href="./index.html" class="header-logo">
+          <a href="./index.html" class="header-logo" lang="en">
             <span class="logo-color">Web</span>Studio</a
           >
 
@@ -46,7 +46,9 @@
 
         <ul class="contacts-header list">
           <li class="item">
-            <a href="info@devstudio.com" class="contact">info@devstudio.com</a>
+            <a href="info@devstudio.com" class="contact" lang="en"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
             <a href="+380961111111" class="contact">+38 096 111 11 11</a>
@@ -58,8 +60,10 @@
     <main>
       <!-- Герой -->
       <section class="hero section">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="button hero" type="submit">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="button hero" type="submit">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- Преимущества -->
@@ -133,12 +137,12 @@
             <li class="item">
               <img src="./images/team_card1.jpg" alt="фото Игоря" width="270" />
               <h3 class="title">Игорь Демьяненко</h3>
-              <p>Product Designer</p>
+              <p lang="en">Product Designer</p>
             </li>
             <li class="item">
               <img src="./images/team_card2.jpg" alt="фото Ольги" width="270" />
               <h3 class="title">Ольга Репина</h3>
-              <p>Frontend Developer</p>
+              <p lang="en">Frontend Developer</p>
             </li>
             <li class="item">
               <img
@@ -147,7 +151,7 @@
                 width="270"
               />
               <h3 class="title">Николай Тарасов</h3>
-              <p>Marketing</p>
+              <p lang="en">Marketing</p>
             </li>
             <li class="item">
               <img
@@ -156,7 +160,7 @@
                 width="270"
               />
               <h3 class="title">Михаил Ермаков</h3>
-              <p>UI Designer</p>
+              <p lang="en">UI Designer</p>
             </li>
           </ul>
         </div>
@@ -166,7 +170,7 @@
     <!-- Футер -->
     <footer class="ftr">
       <div class="container">
-        <a href="./index.html" class="footer-logo">
+        <a href="./index.html" class="footer-logo" lang="en">
           <span class="logo-color">Web</span>Studio</a
         >
         <address>
@@ -179,7 +183,9 @@
               >
             </li>
             <li class="contact">
-              <a href="info@example.com" class="contact">info@example.com</a>
+              <a href="info@example.com" class="contact" lang="en"
+                >info@example.com</a
+              >
             </li>
             <li class="contact">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
