--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     <header class="page-header">
       <div class="container">
         <nav class="main-nav">
-          <a href="./index.html" class="header-logo">
+          <a href="./index.html" class="header-logo" lang="en">
             <span class="logo-color">Web</span>Studio</a
           >
 
@@ -40,7 +40,9 @@
         </nav>
         <ul class="contacts-header list">
           <li class="item">
-            <a href="info@devstudio.com" class="contact">info@devstudio.com</a>
+            <a href="info@devstudio.com" class="contact" lang="en"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
             <a href="+380961111111" class="contact">+38 096 111 11 11</a>
@@ -95,7 +97,9 @@
                   width="370"
                 />
                 <div class="caption">
-                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <h2 class="title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
                   <p class="text">Дизайн</p>
                 </div>
               </a>
@@ -108,7 +112,7 @@
                   width="370"
                 />
                 <div class="caption">
-                  <h2 class="title">Ресторан Seafood</h2>
+                  <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="text">Приложение</p>
                 </div>
               </a>
@@ -117,7 +121,7 @@
               <a class="link" href="">
                 <img src="./images/headphones.jpg" alt="Наушники" width="370" />
                 <div class="caption">
-                  <h2 class="title">Проект Prime</h2>
+                  <h2 class="title">Проект <span lang="en">Prime</span></h2>
                   <p class="text">Маркетинг</p>
                 </div>
               </a>
@@ -126,7 +130,7 @@
               <a class="link" href="">
                 <img src="./images/boxes.jpg" alt="Коробки" width="370" />
                 <div class="caption">
-                  <h2 class="title">Проект Boxes</h2>
+                  <h2 class="title">Проект <span lang="en">Boxes</span></h2>
                   <p class="text">Приложение</p>
                 </div>
               </a>
@@ -135,7 +139,7 @@
               <a class="link" href="">
                 <img src="./images/monitor.jpg" alt="Монитор" width="370" />
                 <div class="caption">
-                  <h2 class="title">Inspiration has no Borders</h2>
+                  <h2 class="title" lang="en">Inspiration has no Borders</h2>
                   <p class="text">Веб-сайт</p>
                 </div>
               </a>
@@ -144,7 +148,9 @@
               <a class="link" href="">
                 <img src="./images/book.jpg" alt="Книга" width="370" />
                 <div class="caption">
-                  <h2 class="title">Издание Limited Edition</h2>
+                  <h2 class="title">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h2>
                   <p class="text">Дизайн</p>
                 </div>
               </a>
@@ -153,7 +159,7 @@
               <a class="link" href="">
                 <img src="./images/lab.jpg" alt="Лейба" width="370" />
                 <div class="caption">
-                  <h2 class="title">Проект LAB</h2>
+                  <h2 class="title">Проект <span lang="en">LAB</span></h2>
                   <p class="text">Маркетинг</p>
                 </div>
               </a>
@@ -162,7 +168,7 @@
               <a class="link" href="">
                 <img src="./images/business.jpg" alt="Нотбук" width="370" />
                 <div class="caption">
-                  <h2 class="title">Growing Business</h2>
+                  <h2 class="title" lang="en">Growing Business</h2>
                   <p class="text">Приложение</p>
                 </div>
               </a>
@@ -176,7 +182,7 @@
 
     <footer class="ftr">
       <div class="container">
-        <a href="./index.html" class="footer-logo">
+        <a href="./index.html" class="footer-logo" lang="en">
           <span class="logo-color">Web</span>Studio</a
         >
         <address>
@@ -189,7 +195,9 @@
               >
             </li>
             <li class="contact">
-              <a href="info@example.com" class="contact">info@example.com</a>
+              <a href="info@example.com" class="contact" lang="en"
+                >info@example.com</a
+              >
             </li>
             <li class="contact">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
