--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
         <div class="container">
           <h2 hidden>Преимущества</h2>
           <ul class="features list">
-            <li class="item">
+            <li class="item icon-antenna">
               <h3 class="title">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="item">
+            <li class="item icon-clock">
               <h3 class="title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="item">
+            <li class="item icon-diagram">
               <h3 class="title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="item">
+            <li class="item icon-astronaut">
               <h3 class="title">Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
@@ -136,13 +136,17 @@
           <ul class="our-team list">
             <li class="item">
               <img src="./images/team_card1.jpg" alt="фото Игоря" width="270" />
-              <h3 class="title">Игорь Демьяненко</h3>
-              <p lang="en">Product Designer</p>
+              <div class="caption">
+                <h3 class="title">Игорь Демьяненко</h3>
+                <p lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/team_card2.jpg" alt="фото Ольги" width="270" />
-              <h3 class="title">Ольга Репина</h3>
-              <p lang="en">Frontend Developer</p>
+              <div class="caption">
+                <h3 class="title">Ольга Репина</h3>
+                <p lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -150,8 +154,10 @@
                 alt="фото Николая"
                 width="270"
               />
-              <h3 class="title">Николай Тарасов</h3>
-              <p lang="en">Marketing</p>
+              <div class="caption">
+                <h3 class="title">Николай Тарасов</h3>
+                <p lang="en">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -159,8 +165,10 @@
                 alt="фото Михаила"
                 width="270"
               />
-              <h3 class="title">Михаил Ермаков</h3>
-              <p lang="en">UI Designer</p>
+              <div class="caption">
+                <h3 class="title">Михаил Ермаков</h3>
+                <p lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -175,19 +183,19 @@
         >
         <address>
           <ul class="contacts-footer list">
-            <li>
+            <li class="item">
               <a
                 class="adress-footer"
                 href="https://goo.gl/maps/JjDCedRFyoNdZQir6"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li class="contact">
+            <li class="item">
               <a href="info@example.com" class="contact" lang="en"
                 >info@example.com</a
               >
             </li>
-            <li class="contact">
+            <li class="item">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
             </li>
           </ul>
