--- a/portfolio.html
+++ b/portfolio.html
@@ -194,12 +194,12 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li class="contact">
+            <li class="item">
               <a href="info@example.com" class="contact" lang="en"
                 >info@example.com</a
               >
             </li>
-            <li class="contact">
+            <li class="item">
               <a href="+380961111111" class="contact">+38 096 111 11 11</a>
             </li>
           </ul>
