--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <main>
       <!-- Герой -->
-      <section class="hero section">
+      <section class="section hero">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="button hero" type="submit">Заказать услугу</button>
@@ -67,7 +67,7 @@
       </section>
 
       <!-- Преимущества -->
-      <section class="benefits section">
+      <section class="section benefits">
         <div class="container">
           <h2 hidden>Преимущества</h2>
           <ul class="features list">
@@ -104,7 +104,7 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section class="section">
+      <section class="section our-works">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work list">
