--- a/index.html
+++ b/index.html
@@ -139,6 +139,36 @@
               <div class="caption">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p lang="en">Product Designer</p>
+                <ul class="list socials">
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -146,6 +176,36 @@
               <div class="caption">
                 <h3 class="title">Ольга Репина</h3>
                 <p lang="en">Frontend Developer</p>
+                <ul class="list socials">
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -157,6 +217,36 @@
               <div class="caption">
                 <h3 class="title">Николай Тарасов</h3>
                 <p lang="en">Marketing</p>
+                <ul class="list socials">
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -168,6 +258,36 @@
               <div class="caption">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p lang="en">UI Designer</p>
+                <ul class="list socials">
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-social">
+                    <a class="link-social" href="">
+                      <svg class="svg-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
