icon for contacts in header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
           <a href="./index.html" class="header-logo" lang="en">
             <span class="logo-color">Web</span>Studio</a
           >
-
           <ul class="site-nav list">
             <li class="item"><a href="" class="link current">Студия</a></li>
             <li class="item">
@@ -46,12 +45,20 @@
 
         <ul class="contacts-header list">
           <li class="item">
-            <a href="info@devstudio.com" class="contact" lang="en"
-              >info@devstudio.com</a
+            <a href="info@devstudio.com" class="contact" lang="en">
+              <svg class="svg-icon">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="+380961111111" class="contact">+38 096 111 11 11</a>
+            <a href="+380961111111" class="contact">
+              <svg class="svg-icon">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -70,7 +77,7 @@
       <section class="section benefits">
         <div class="container">
           <h2 hidden>Преимущества</h2>
-          <ul class="features list">
+          <ul class="list features">
             <li class="item icon-antenna">
               <h3 class="title">Внимание к деталям</h3>
               <p>
@@ -107,7 +114,7 @@
       <section class="section our-works">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="work list">
+          <ul class="list work">
             <li class="item">
               <img
                 src="./images/box1.jpg"
@@ -130,10 +137,10 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="team-block section">
+      <section class="section team-block">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="our-team list">
+          <ul class="list our-team">
             <li class="item">
               <img src="./images/team_card1.jpg" alt="фото Игоря" width="270" />
               <div class="caption">
@@ -302,7 +309,7 @@
           <span class="logo-color">Web</span>Studio</a
         >
         <address>
-          <ul class="contacts-footer list">
+          <ul class="list contacts-footer">
             <li class="item">
               <a
                 class="adress-footer"
