--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="./index.html" class="header-logo" lang="en">
             <span class="logo-color">Web</span>Studio</a
           >
-          <ul class="site-nav list">
+          <ul class="list site-nav">
             <li class="item"><a href="" class="link current">Студия</a></li>
             <li class="item">
               <a href="./portfolio.html" class="link">Портфолио</a>
@@ -43,7 +43,7 @@
           </ul>
         </nav>
 
-        <ul class="contacts-header list">
+        <ul class="list contacts-header">
           <li class="item">
             <a href="info@devstudio.com" class="contact" lang="en">
               <svg class="svg-icon">
