--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Преимущества -->
       <section class="section benefits">
         <div class="container">
-          <h2 hidden>Преимущества</h2>
+          <h2 class=".visually-hidden">Преимущества</h2>
           <ul class="list features">
             <li class="item icon-antenna">
               <h3 class="title">Внимание к деталям</h3>
