--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 
       <section class="section">
         <div class="container">
-          <h1 hidden>Наши работы</h1>
+          <h1 class=".visually-hidden">Наши работы</h1>
           <ul class="filter">
             <li class="item">
               <button class="button filter" type="button">Все</button>
