section regular-clients

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
         <ul class="list contacts-header">
           <li class="item">
             <a href="info@devstudio.com" class="contact" lang="en">
-              <svg class="svg-icon">
-                <use href="./images/icons.svg#icon-smartphone"></use>
+              <svg class="svg-envelope">
+                <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a href="+380961111111" class="contact">
-              <svg class="svg-icon">
-                <use href="./images/icons.svg#icon-envelope"></use>
+              <svg class="svg-smartphone">
+                <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -76,7 +76,7 @@
       <!-- Преимущества -->
       <section class="section benefits">
         <div class="container">
-          <h2 class=".visually-hidden">Преимущества</h2>
+          <h2 class="visually-hidden">Преимущества</h2>
           <ul class="list features">
             <li class="item icon-antenna">
               <h3 class="title">Внимание к деталям</h3>
@@ -296,6 +296,51 @@
                   </li>
                 </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Постоянные клиенты -->
+      <section class="section clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="list regular-clients">
+            <li class="item-client">
+              <a href="" class="link-client"
+                ><svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-Logo1"></use></svg
+              ></a>
+            </li>
+            <li class="item-client">
+              <a href="" class="link-client"
+                ><svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-Logo2"></use></svg
+              ></a>
+            </li>
+            <li class="item-client">
+              <a href="" class="link-client"
+                ><svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-Logo3"></use></svg
+              ></a>
+            </li>
+            <li class="item-client">
+              <a href="" class="link-client"
+                ><svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-Logo4"></use></svg
+              ></a>
+            </li>
+            <li class="item-client">
+              <a href="" class="link-client"
+                ><svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-Logo5"></use></svg
+              ></a>
+            </li>
+            <li class="item-client">
+              <a href="" class="link-client"
+                ><svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-Logo6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
