Footer and portfolio

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         </nav>
 
         <ul class="list contacts-header">
-          <li class="item">
-            <a href="info@devstudio.com" class="contact" lang="en">
+          <li class="item envelope">
+            <a href="mailto:info@devstudio.com" class="contact" lang="en">
               <svg class="svg-envelope">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a href="+380961111111" class="contact">
+          <li class="item smartphone">
+            <a href="tel:+380961111111" class="contact">
               <svg class="svg-smartphone">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -350,28 +350,65 @@
     <!-- Футер -->
     <footer class="ftr">
       <div class="container">
-        <a href="./index.html" class="footer-logo" lang="en">
-          <span class="logo-color">Web</span>Studio</a
-        >
-        <address>
-          <ul class="list contacts-footer">
-            <li class="item">
-              <a
-                class="adress-footer"
-                href="https://goo.gl/maps/JjDCedRFyoNdZQir6"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+        <div class="ft-logo-contacts">
+          <a href="./index.html" class="footer-logo" lang="en">
+            <span class="logo-color">Web</span>Studio</a
+          >
+          <address>
+            <ul class="list contacts-footer">
+              <li class="item">
+                <a
+                  class="adress-footer"
+                  href="https://goo.gl/maps/JjDCedRFyoNdZQir6"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a href="mailto:info@example.com" class="contact" lang="en"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="contact"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="ftsocial-link">
+          <h2 class="section-title social-title">присоединяйтесь</h2>
+          <ul class="list socials">
+            <li class="item-social">
+              <a class="link-social" href="">
+                <svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="info@example.com" class="contact" lang="en"
-                >info@example.com</a
-              >
+            <li class="item-social">
+              <a class="link-social" href="">
+                <svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="+380961111111" class="contact">+38 096 111 11 11</a>
+            <li class="item-social">
+              <a class="link-social" href="">
+                <svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-social">
+              <a class="link-social" href="">
+                <svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
