--- a/portfolio.html
+++ b/portfolio.html
@@ -24,28 +24,37 @@
 
   <body class="page">
     <!-- Шапка сайта -->
-
     <header class="page-header">
       <div class="container">
         <nav class="main-nav">
           <a href="./index.html" class="header-logo" lang="en">
             <span class="logo-color">Web</span>Studio</a
           >
-
-          <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="" class="link current">Портфолио</a></li>
+          <ul class="list site-nav">
+            <li class="item"><a href="" class="link current">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contacts-header list">
-          <li class="item">
-            <a href="info@devstudio.com" class="contact" lang="en"
-              >info@devstudio.com</a
+
+        <ul class="list contacts-header">
+          <li class="item envelope">
+            <a href="mailto:info@devstudio.com" class="contact" lang="en">
+              <svg class="svg-envelope">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
-          <li class="item">
-            <a href="+380961111111" class="contact">+38 096 111 11 11</a>
+          <li class="item smartphone">
+            <a href="tel:+380961111111" class="contact">
+              <svg class="svg-smartphone">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -58,7 +67,7 @@
 
       <section class="section">
         <div class="container">
-          <h1 class=".visually-hidden">Наши работы</h1>
+          <h1 class="visually-hidden">Наши работы</h1>
           <ul class="filter">
             <li class="item">
               <button class="button filter" type="button">Все</button>
@@ -179,31 +188,67 @@
     </main>
 
     <!-- Футер -->
-
     <footer class="ftr">
       <div class="container">
-        <a href="./index.html" class="footer-logo" lang="en">
-          <span class="logo-color">Web</span>Studio</a
-        >
-        <address>
-          <ul class="contacts-footer list">
-            <li>
-              <a
-                class="adress-footer"
-                href="https://goo.gl/maps/JjDCedRFyoNdZQir6"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+        <div class="ft-logo-contacts">
+          <a href="./index.html" class="footer-logo" lang="en">
+            <span class="logo-color">Web</span>Studio</a
+          >
+          <address>
+            <ul class="list contacts-footer">
+              <li class="item">
+                <a
+                  class="adress-footer"
+                  href="https://goo.gl/maps/JjDCedRFyoNdZQir6"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a href="mailto:info@example.com" class="contact" lang="en"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="contact"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="ftsocial-link">
+          <h2 class="section-title social-title">присоединяйтесь</h2>
+          <ul class="list socials">
+            <li class="item-social">
+              <a class="link-social" href="">
+                <svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="info@example.com" class="contact" lang="en"
-                >info@example.com</a
-              >
+            <li class="item-social">
+              <a class="link-social" href="">
+                <svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="item">
-              <a href="+380961111111" class="contact">+38 096 111 11 11</a>
+            <li class="item-social">
+              <a class="link-social" href="">
+                <svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-social">
+              <a class="link-social" href="">
+                <svg class="svg-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
