--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </section>
 
       <!-- Преимущества -->
-      <section class="section benefits">
+      <section class="benefits">
         <div class="container">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="list features">
@@ -377,7 +377,7 @@
           </address>
         </div>
         <div class="ftsocial-link">
-          <h2 class="section-title social-title">присоединяйтесь</h2>
+          <h2 class="social-title">присоединяйтесь</h2>
           <ul class="list socials">
             <li class="item-social">
               <a class="link-social" href="">
