--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,9 @@
             <span class="logo-color">Web</span>Studio</a
           >
           <ul class="list site-nav">
-            <li class="item"><a href="" class="link current">Студия</a></li>
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
             <li class="item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="" class="link current">Портфолио</a>
             </li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
@@ -217,7 +217,7 @@
           </address>
         </div>
         <div class="ftsocial-link">
-          <h2 class="section-title social-title">присоединяйтесь</h2>
+          <h2 class="social-title">присоединяйтесь</h2>
           <ul class="list socials">
             <li class="item-social">
               <a class="link-social" href="">
